# COMP395-Final-Group-Project

./: .gitignore  README.md  dataset.py  datatest.py  evaluate.py  explanation.tex  main.py  mlflow.db  presentation.html  project_log.txt  pyproject.toml  report.tex  train.py  visualize_data.py  visualize_results.py
docs/: explanation.tex  presentation.html  presentation.tex  project_log.txt  refs.bib  report.tex
models/: __init__.py  fno.py  unet.py
